Tweaked a few layout issues and updated homepage title

--- a/sharedSheet.css
+++ b/sharedSheet.css
@@ -29,6 +29,9 @@
 	color: black;
 	text-decoration: none;
 }
+.projMedia h2 a	{
+	text-decoration: none;
+}
 
 
 #iconContainer {
